log
Fri 21 Apr 2023 06:32:23 PM UTC: 
 treemap.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  1|8
total_score: 0/70
feba0d7
Fri 21 Apr 2023 06:34:06 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
fbcf08b
Fri 21 Apr 2023 06:34:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
be183f3
Fri 21 Apr 2023 06:47:42 PM UTC: 
 tests:  4|7
total_score: 5/70
0647b31
Fri 21 Apr 2023 06:48:05 PM UTC: 
 treemap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:5: error: expected expression before ‘}’ token
   86 |     }
      |     ^
treemap.c:79:13: error: unused variable ‘aux’ [-Werror=unused-variable]
   79 |         int aux = tree->lower_than(key, current->pair->key);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
f64051c
Fri 21 Apr 2023 06:48:59 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
2eabac4
Fri 21 Apr 2023 06:49:27 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|7
total_score: 5/70
1c53caa
Fri 21 Apr 2023 06:51:36 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  6|7
total_score: 5/70
39ab8cd
Fri 21 Apr 2023 06:54:13 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
e021224
Fri 21 Apr 2023 07:04:15 PM UTC: 
 tests:  6|7
total_score: 5/70
cc651c7
Fri 21 Apr 2023 07:04:47 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
9d7896e
Fri 21 Apr 2023 07:07:57 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
efc980e
Fri 21 Apr 2023 07:08:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
0f75cfc
Fri 21 Apr 2023 07:08:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
8875e94
Fri 21 Apr 2023 07:11:00 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:55:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   55 |   while(x->left != NULL)
      |   ^~~~~
treemap.c:57:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   57 |     return x;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
33dae53
Fri 21 Apr 2023 07:26:19 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:4:
treemap.c:74:1: error: expected identifier or ‘(’ before ‘}’ token
   74 | }
      | ^
treemap.c: In function ‘minimum’:
treemap.c:78:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   78 |   while(x->left != NULL)
      |   ^~~~~
treemap.c:80:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   80 |     return x;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5272e0c
Fri 21 Apr 2023 07:26:31 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
treemap.c:74:1: error: expected identifier or ‘(’ before ‘}’ token
   74 | }
      | ^
treemap.c: In function ‘minimum’:
treemap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bc79816
Fri 21 Apr 2023 07:26:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:74:1: error: expected identifier or ‘(’ before ‘}’ token
   74 | }
      | ^
Compilation failed
882852f
Fri 21 Apr 2023 07:26:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
26e5c7a
Fri 21 Apr 2023 07:27:49 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
121e045
Fri 21 Apr 2023 07:29:09 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:139:1: error: control reaches end of non-void function [-Werror=return-type]
  139 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
97ab0e6
Fri 21 Apr 2023 07:29:49 PM UTC: 
 treemap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  17|3
total_score: 30/70
c1b8c57
Sat 22 Apr 2023 04:44:11 PM UTC: 
 treemap.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
 tests:  17|3
total_score: 30/70
cb85ea8
Sat 22 Apr 2023 04:48:00 PM UTC: 
 treemap.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  17|3
total_score: 30/70
fe095ca
Sat 22 Apr 2023 04:54:42 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:132:13: error: unused variable ‘nodo_limite_superior’ [-Werror=unused-variable]
  132 |   TreeNode* nodo_limite_superior = NULL;
      |             ^~~~~~~~~~~~~~~~~~~~
treemap.c:131:13: error: unused variable ‘current’ [-Werror=unused-variable]
  131 |   TreeNode* current = tree->root;
      |             ^~~~~~~
treemap.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6a6df30
Sat 22 Apr 2023 05:00:51 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:132:13: error: variable ‘nodo_limite_superior’ set but not used [-Werror=unused-but-set-variable]
  132 |   TreeNode* nodo_limite_superior = NULL;
      |             ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4690746
Sat 22 Apr 2023 05:02:48 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  17|3
total_score: 30/70
90f3136
Sat 22 Apr 2023 05:03:48 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  17|3
total_score: 30/70
9bd8f9d
Sat 22 Apr 2023 05:06:20 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
test.c: In function ‘upperBound’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
cfe67eb
